# dynamics-ai-intelligence-hub

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: backlog-project.json
.github/ISSUE_TEMPLATE/: backlog-item.yml  external-blocker.yml
.github/workflows/: ci.yml
Backlog/: Dynamics_AI_Intelligence_Hub_Backlog_v0_4.md  Dynamics_AI_Intelligence_Hub_Complete_Issue_Set.md  Dynamics_Dataverse_Technical_Documentation_v0_1.md  Paddock_Club_Punter_Artefacts_v0_4.md
dataverse/solutions/: README.md
docs/architecture/: agent-telemetry.md  agent-workflow.md  agents.md  ai-logging.md  crm-assistant.md  crm-schema-notes.md  dynamics-dataverse.md  experiment-tracking.md  f1-data-source-coverage.md  fastf1-analytics.md  genai-evaluation.md  inference-endpoint.md  lap-regression.md  ml-features.md  model-evaluation.md  observability-standard.md  observability.md  odds-model.md  openf1-mapping.md  rag-assistant.md  rag-evaluation.md  rag-generation.md  rag-ingestion.md  rag-retrieval.md  search-index.md  settlement-registry.md  stint-clustering.md  strategy-classification.md
docs/architecture/model-cards/: lap-time-regression.md  stint-clustering.md  strategy-classification.md
docs/decisions/: ADR-0002-iac-tool.md  ADR-0003-dataverse-auth.md  ADR-0004-functions-hosting-model.md  ADR-0005-crm-schema.md  ADR-0006-function-calling-boundary.md  ADR-0007-agent-framework.md  ADR-0008-odds-settlement.md  ADR-0009-experience-surface.md
docs/diagrams/: crm-erd.md
docs/learning/: prompt-engineering.md
docs/security/: dataverse-setup.md  permission-aware-retrieval.md  prompt-injection-results.md  secrets-and-identity.md
infrastructure/: README.md
infrastructure/bicep/: keyvault.bicep  main.bicep
infrastructure/bicep/modules/: app-insights.bicep  function-app.bicep  observability.bicep  storage.bicep
infrastructure/environments/: dev.bicepparam
notebooks/: lap-telemetry.ipynb  model-comparison.ipynb  stint-clustering.ipynb
scripts/agents/: verify_core_agents.py  verify_workflow.py
scripts/ai/: verify_actions.py  verify_assistant.py  verify_assistant_rag.py  verify_openai.py  verify_tools.py
scripts/analytics/: verify_fastf1.py
scripts/azure_functions/: verify_functions.py
scripts/dataverse/: create_racy_schema.py  seed_crm.py
scripts/ml/: export_lap_model.py  log_experiments.py  train_lap_regression.py  train_strategy_classifier.py
scripts/paddock/: train_odds_model.py  verify_intake.py  verify_settlement.py
scripts/rag/: run_evaluation.py  verify_embeddings.py  verify_generation.py  verify_index.py  verify_permission.py  verify_rag_assistant.py  verify_retrieval.py
src/: .funcignore  function_app.py  local.settings.json.example  requirements.txt
src/agents/: __init__.py  agent.py  planner.py  reporter.py  researcher.py  reviewer.py  telemetry.py  workflow.py
src/ai/: __init__.py  client.py  config.py  crm_tools.py  exceptions.py  prompt_log.py  structured.py  summaries.py
src/ai/assistant/: __init__.py  retriever.py  service.py
src/ai/evaluation/: __init__.py  dataset.py  evaluator.py  judge.py
src/ai/prompts/: __init__.py  library.py
src/ai/tools/: __init__.py  base.py  registry.py  router.py  samples.py
src/api/: __init__.py  client.py  exceptions.py
src/azure_functions/: function_app.py  handlers.py  inference.py  ingestion.py  observability.py  requirements.txt
src/dataverse/: __init__.py  auth.py  client.py  config.py  exceptions.py
src/dataverse/seed/: __init__.py  generators.py  seeder.py
src/fastf1_analytics/: __init__.py  analysis.py  cache.py  plots.py
src/ml/: __init__.py  classification.py  clustering.py  evaluation.py  features.py  regression.py  serving.py  tracking.py
src/openf1/: __init__.py  client.py  mapping.py  models.py  persistence.py
src/paddock/: __init__.py  odds.py  odds_model.py
src/paddock/intake/: __init__.py  logging_repo.py  mapping.py  schema.py  service.py
src/paddock/settlement/: __init__.py  context.py  drivers.py  grading.py  registry.py  types.py
src/paddock/wager/: __init__.py  lock.py  settlement.py  settlement_repo.py
src/rag/: __init__.py  assistant.py  embeddings.py  generation.py  index.py  ingestion.py  retrieval.py
src/rag/evaluation/: __init__.py  dataset.py  evaluator.py
src/shared/: __init__.py  config.py  credentials.py  exceptions.py  logging.py  resilience.py
tests/agents/: test_agent.py  test_core_agents.py  test_workflow.py
tests/ai/: test_ai_client.py  test_crm_tools.py  test_structured.py  test_summaries.py
tests/ai/assistant/: test_assistant_rag.py  test_assistant_retriever.py  test_assistant_service.py
tests/ai/evaluation/: test_genai_eval.py
tests/ai/prompts/: test_prompt_library.py
tests/ai/tools/: test_tools_base.py  test_tools_registry.py  test_tools_router.py  test_tools_samples.py
tests/api/: test_client.py
tests/azure_functions/: test_handlers.py  test_inference.py  test_observability.py  test_timer_ingestion.py
tests/dataverse/: test_dataverse_client.py  test_dataverse_integration.py  test_seed.py
tests/fastf1_analytics/: test_analysis.py  test_cache.py  test_plots.py
tests/ml/: conftest.py  test_classification.py  test_clustering.py  test_features.py  test_model_evaluation.py  test_regression.py  test_serving.py  test_tracking.py
tests/openf1/: test_models.py  test_openf1_client.py  test_persistence.py
tests/paddock/: test_betting_semantics.py  test_drivers.py  test_grading.py  test_lock.py  test_odds.py  test_odds_model.py  test_registry.py  test_settlement.py  test_settlement_repo.py
tests/paddock/intake/: test_intake_logging.py  test_intake_mapping.py  test_intake_service.py
tests/rag/: test_assistant.py  test_embeddings.py  test_evaluation.py  test_generation.py  test_index.py  test_ingestion.py  test_permission.py  test_retrieval.py
tests/security/: test_prompt_injection.py
tests/shared/: test_config.py  test_credentials.py  test_exceptions.py  test_logging.py  test_public_api.py  test_resilience.py  test_smoke.py
