[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamics-ai-intelligence-hub"
version = "0.1.0"
description = "Portfolio-grade reference implementation: Azure AI, Dynamics 365/Dataverse, RAG and agents over a client-agnostic CRM domain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jules Davies" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "azure-identity>=1.17",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# scripts/ are operational one-off tooling (dense metadata literals), not package code
extend-exclude = ["scripts"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, flake8-simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# NOTE: coverage is deliberately NOT in addopts. pytest-cov's --cov-fail-under
# makes editor test discovery (pytest --collect-only) exit non-zero, which
# breaks VS Code's Test Explorer and the test debugger. Run coverage explicitly:
#   pytest --cov=src --cov-report=term-missing --cov-fail-under=80
# CI (story #9) runs that command; plain `pytest` stays editor-friendly.
addopts = ""

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
