[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamics-ai-intelligence-hub"
version = "0.1.0"
description = "Portfolio-grade reference implementation: Azure AI, Dynamics 365/Dataverse, RAG and agents over a client-agnostic CRM domain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jules Davies" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "azure-identity>=1.17",
  "azure-search-documents>=11.5",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
# ML & data-engineering pillar (Epics 5–7). Kept separate so the core install
# stays light; CI installs `.[dev,analytics]`.
analytics = [
  "fastf1>=3.5",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# scripts/ are operational one-off tooling (dense metadata literals), not package code
extend-exclude = ["scripts"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, flake8-simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
# Per-package pytest conftest.py files share the module name "conftest"; exclude
# them from mypy to avoid a duplicate-module clash (they hold only test setup).
exclude = ['(^|/)conftest\.py$']

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = ["fastf1.*", "pandas.*", "matplotlib.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# NOTE: coverage is deliberately NOT in addopts. pytest-cov's --cov-fail-under
# makes editor test discovery (pytest --collect-only) exit non-zero, which
# breaks VS Code's Test Explorer and the test debugger. Run coverage explicitly:
#   pytest --cov=src --cov-report=term-missing --cov-fail-under=80
# CI (story #9) runs that command; plain `pytest` stays editor-friendly.
addopts = ""
# Targeted: silence a known pandas 2.3 / numpy 2.x timedelta deprecation raised
# deep in pandas when parsing Timedelta strings (upstream, not our code).
filterwarnings = [
  "ignore:The 'generic' unit for NumPy timedelta is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
